# DoppelTest

./: .gitignore  INSTALL  INSTALL.MD  LICENSE  Makefile  README  README.MD  README.md  REQUIREMENTS  REQUIREMENTS.MD  STATUS  STATUS.MD  TestGeneration.py  benchmark.py  config.py  main.py  main_baseline.py  main_determinism.py  main_ga.py  main_ga_performance.py  main_oracle_checker.py  main_random.py  map_stats.py  pyproject.toml  requirements.txt  test.py  testMain1.py  testMain2.py  test_analyzer.py  test_liability_checker.py  test_main.py  test_rerun.py
apollo/: ApolloContainer.py  ApolloRunner.py  CyberBridge.py  Dreamview.py  MessageBroker.py  utils.py
automation/: Chromosome.py  RecordAnalyzer.py  section_ad.py  section_pd.py  section_tc.py
data/maps/borregas_ave/: map.pickle
data/maps/borregas_ave_fix/: routing_map.txt  sim_map.txt
docs/source/: conf.py  index.rst  installation.rst  internals.rst  publication.rst  quickstart.rst
docs/source/internals/: apollo.rst  (+6 more)
framework/baseline/: BaseScenarioRunner.py  DynamicObstacleManager.py
framework/oracles/: OracleInterface.py  OracleManager.py  ViolationTracker.py  __init__.py
framework/scenario/: PedestrianManager.py  ScenarioRunner.py  TrafficControlManager.py  __init__.py  ad_agents.py  pd_agents.py  tc_config.py
hdmap/: MapParser.py  __init__.py
map/: MapAnalyzer.py  utils.py
scenario/: ApolloRunner.py  ChromosomeRunner.py  PedestrianManager.py  ScenarioRunner.py  TrafficManager.py  __init__.py
scripts/: install_apollo.sh  setup.sh
utils/: ThreadSafeVariable.py  __init__.py  config.py
(+247 files in other folders)
